# descarteslabs-dynamic-compute

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pipy.yaml  pypi.yaml
descarteslabs/dynamic_compute/: __init__.py  blob.py  compute_map.py  datetime_utils.py  dl_utils.py  dot.py  dynamic_compute.py  eo_utils.py  groupby.py  image_stack.py  mosaic.py  operations.py  proxies.py  pyversions.py  reductions.py  serialization.py
descarteslabs/dynamic_compute/catalog/: __init__.py  blob.py
descarteslabs/dynamic_compute/graft/: spec.md
descarteslabs/dynamic_compute/graft/client/: __init__.py  client.py
descarteslabs/dynamic_compute/graft/interpreter/: __init__.py  interpreter.py
descarteslabs/dynamic_compute/graft/syntax/: __init__.py  syntax.py
descarteslabs/dynamic_compute/interactive/: __init__.py  clearable.py  colormaps.py  inspector.py  layer.py  layer_controller.py  layer_controller_row.py  lonlat.py  map_.py  parameters.py  tile_url.py  utils.py
descarteslabs/example-notebooks/: 01 Interactive Computing with Mosaics.ipynb  02 Interactive Computing with ImageStacks.ipynb  03 GeoContexts and Array Computation.ipynb  04 Advanced Computing Concepts.ipynb  TESTING.md  example1-visualizing-imagery.ipynb
