[tool.poetry]
name = "descarteslabs-dynamic-compute"
version = "1.1.3"
description = ""
license = "Apache-2.0"
authors = ["Descartes Labs"]
readme = "README.md"
packages = [
    { include = "descarteslabs" },
]

[tool.poetry.dependencies]
python = ">=3.8, <3.12"
ipyleaflet = ">=0.15.0"
shapely = ">2,<3"
utm = "^0.7.0"
pyproj = "^3.4.1"
geojson = ">=2.5.0"
numpy = "<=1.24.2"
descarteslabs = ">=2.0.3,<4"
cloudpickle = [
    {version = "1.6.0", python = ">=3.8,<3.9"},
    {version = "3.0.0", python = ">=3.9"}
]
certifi = ">=2023.7.22"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
