[tool.poetry]
name = "descarteslabs-dynamic-compute"
version = "1.4.2"
description = ""
license = "Apache-2.0"
authors = ["Descartes Labs"]
readme = "README.md"
packages = [
    { include = "descarteslabs" },
]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
ipyleaflet = ">=0.15.0"
shapely = ">2,<3"
utm = "^0.7.0"
pandas = [
    {version = "<=2.0.3", python = "<3.12"},
    {version = ">=2.2", python = ">=3.12"}
]
pyproj = [
    {version = "<=3.4.1", python = "<3.12"},
    {version = ">=3.6.1", python = ">=3.12"}
]
geojson = ">=2.5.0"
numpy = [
    {version = "<=1.24.2", python = "<3.11"},
    {version = ">=1.26", python = ">=3.11"}
]
pyzmq = [
    {version = "<=26.0.3", python = "<3.12"},
    {version = ">=25.1.1", python = ">=3.12"}
]
descarteslabs = ">=3.3,<5"
cloudpickle = "3.0.0"
certifi = ">=2023.7.22"
imagecodecs = [
    {version = "<=2023.3.16", python = "<3.12"},
    {version = ">=2023.7.4", python = ">=3.12"}
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
